test/semantic_errors/invalid_unaryop2.mc
void main() {
    char a;
    int c;
    c = -a;
}